# Pac-Man

./: CMakeLists.txt  README.md  apsc142project.c  colours.c  colours.h  defines.h  game.c  game.h  ghost.c  ghost.h  map.c  map.h  map.txt  tests.cpp
